@@ -19,6 +19,7 @@
 - Removed support for Linux 32-bit.
 - Updated native Windows build to a newer version of premake 5 (alpha 11).
 - Added some missing SteamApps functions. (#50)
+- Added SteamScreenshots wrapper.
 
 [1.6.2]
 - Cleaned up Maven project structure. Removed superfluous releases of 'steamworks4j-parent' and 'steamworks4j-jnigen' repositories.
